@@ -1,0 +1,52 @@
+/*
+ * panel-list.h: GList & GSList extensions
+ *
+ * Copyright (C) 2008 Novell, Inc.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+ * 02111-1307, USA.
+ *
+ * Authors:
+ *	Vincent Untz <vuntz@gnome.org>
+ */
+
+#ifndef PANEL_LIST_H
+#define PANEL_LIST_H
+
+#include <glib.h>
+
+G_BEGIN_DECLS
+
+GList *panel_g_list_insert_before (GList        *list,
+				   GList        *sibling,
+				   GList        *link);
+GList *panel_g_list_insert_after  (GList        *list,
+				   GList        *sibling,
+				   GList        *link);
+GList *panel_g_list_swap_next     (GList        *list,
+				   GList        *dl);
+GList *panel_g_list_swap_prev     (GList        *list,
+				   GList        *dl);
+GList *panel_g_list_resort_item   (GList        *list,
+				   gpointer      data,
+				   GCompareFunc  func);
+
+GSList *panel_g_slist_make_unique (GSList       *list,
+				   GCompareFunc  compare,
+				   gboolean      free_data);
+
+G_END_DECLS
+
+#endif /* PANEL_LIST_H */
