@@ -1,3 +1,11 @@
+2008-12-10  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-util.[ch]: move all panel_g_(s)list functions to...
+	* libpanel-util/panel-list.[ch]: ... here (new files)
+	* libpanel-util/Makefile.am: add new file
+	* panel-profile.c:
+	* panel-widget.c: include panel-list.h
+
 2008-12-09  Vincent Untz  <vuntz@gnome.org>
 
 	Remove dependency on gnome_util_home_file()
